Werkende versie beschikbaar
CBSparser bevat nu voorbeelden voor alle soorten tabellen die binnen een Wijk- en Buurten set vallen. Voor de meeste bestaan ook functies. Inclusief mogelijkheden om via de URL te filteren en via een tekstbestand aan te gevel welke kolommen je gaat gebruiken.

--- a/CBSparserOData4.ipynb
+++ b/CBSparserOData4.ipynb
@@ -28,6 +28,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -72,16 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_observations(table_url, url_filter = \"\"):\n",
     "    \n",
+    "    \"\"\"Haal de tabel met metingen op. Filteren om minder of specifiekere data op te vragen is mogelijk as volgt:\n",
+    "    url_filter = ?$filter=WijkenEnBuurten eq 'GM0363' and Measure eq 'T001036'\n",
+    "    Door de filteren op deze kolommen kun je een plaats (land, gemeente, wijk of buurt) en dan een soort meting kiezen.\n",
+    "    De website van het CBS vermeldt niet hoe je op meerdere waarden in één kolom filtert. \n",
+    "    Die mogelijkheid bestaat waarschijnlijk wel. Je hoeft niet beide kolommen te gebruiken voor het filter.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    if url_filter == \"\":\n",
     "        target_url = table_url + \"/Observations\"\n",
     "    elif \"?$filter=\" in url_filter:\n",
     "        target_url = table_url + \"/Observations\" + url_filter\n",
+    "        print(target_url)\n",
     "    else:\n",
     "        print(\"WAARSCHUWING! FILTER NIET GOED GEFORMATTEERD. VERGELIJK MET VOORBEELD OF GA NAAR \")\n",
     "        print(\"\\n https://www.cbs.nl/nl-nl/onze-diensten/open-data/open-data-v4/filters-odata-v4\")\n",
@@ -407,6 +426,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filteren van query\n",
+    "Het filteren van de data maakt het downloaden sneller.\n",
+    "Het filteren van 'Observations' data kan door code van dit format achter de url te plakken:\n",
+    "\n",
+    "**?$filter=WijkenEnBuurten eq 'GM0363' and Measure eq 'T001036'**\n",
+    "\n",
+    "De code uit de kolom WijkenEnBuurten kun je vinden met \n",
+    "\n",
+    "**get_odata(table_url + \"/WijkenEnBuurtenCodes\")**\n",
+    "\n",
+    "De 'Title' kolom van deze tabel bevat de namen van wijken, zodat je kan zoeken met str.find, <>.str.contains of Regex.\n",
+    "Zoals wel vaken met tektskolommen moet je dan vertrouwen op de volledigheid en consistentie.\n",
+    "Achteraf controleren of je alle wijken hebt is dus wel aangeraden.\n",
+    "De kolom WijkenenBuurten bevat zowel landen, gemeenten, wijken als buurten.\n",
+    "Aan het voorvoegsel van twee letters kun je zien met welke soort regio je te maken hebt.\n",
+    "\n",
+    "Zie https://www.cbs.nl/nl-nl/onze-diensten/open-data/open-data-v4/filters-odata-v4 voor meer uitleg."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -474,29 +516,6 @@
     "print(table_test.columns)\n",
     "print(table_test.head(30))\n",
     "# Kolom ValueAttribute heeft geen waarden"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Filteren van query\n",
-    "Het filteren van de data maakt het downloaden sneller.\n",
-    "Het filteren van 'Observations' data kan door code van dit format achter de url te plakken:\n",
-    "\n",
-    "**?$filter=WijkenEnBuurten eq 'GM0363' and Measure eq 'T001036'**\n",
-    "\n",
-    "De code uit de kolom WijkenEnBuurten kun je vinden met \n",
-    "\n",
-    "**get_odata(table_url + \"/WijkenEnBuurtenCodes\")**\n",
-    "\n",
-    "De 'Title' kolom van deze tabel bevat de namen van wijken, zodat je kan zoeken met str.find, <>.str.contains of Regex.\n",
-    "Zoals wel vaken met tektskolommen moet je dan vertrouwen op de volledigheid en consistentie.\n",
-    "Achteraf controleren of je alle wijken hebt is dus wel aangeraden.\n",
-    "De kolom WijkenenBuurten bevat zowel landen, gemeenten, wijken als buurten.\n",
-    "Aan het voorvoegsel van twee letters kun je zien met welke soort regio je te maken hebt.\n",
-    "\n",
-    "Zie https://www.cbs.nl/nl-nl/onze-diensten/open-data/open-data-v4/filters-odata-v4 voor meer uitleg."
    ]
   },
   {
@@ -639,26 +658,156 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Selecteren features en samenvoegen data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def feature_select(text_file):\n",
+    "    features = open(text_file,\"r\")\n",
+    "    features = features.readlines()\n",
+    "    features2 = \"\"\n",
+    "    for line in features:\n",
+    "        features2 += line\n",
+    "    # Verwijder \\n, scheid op , en verwijder spaties aan begin\n",
+    "    features2 = re.sub(\"\\n\", \"\", features2)\n",
+    "    features2 = re.split(\",\", features2)\n",
+    "    features = []\n",
+    "    for feat in features2:\n",
+    "        features.append(re.sub(\"^ \",\"\", feat))\n",
+    "        \n",
+    "    return features\n",
+    "\n",
+    "features = feature_select(\"features_test1.txt\")\n",
+    "#features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://odata4.cbs.nl/CBS/83765NED/Observations?$filter=WijkenEnBuurten eq 'GM0828'\n",
+      "<bound method NDFrame.head of           Id    Measure    Value ValueAttribute WijkenEnBuurten\n",
+      "0    1169358    CRI3000      4.0           None          GM0828\n",
+      "1    1169357    CRI2000      5.0           None          GM0828\n",
+      "2    1169356    CRI1100      3.0           None          GM0828\n",
+      "3    1169355     ST0003   1360.0           None          GM0828\n",
+      "4    1169354     ST0001      3.0           None          GM0828\n",
+      "5    1169352    A047040    774.0           None          GM0828\n",
+      "6    1169351    A047044  16319.0           None          GM0828\n",
+      "7    1169350  T001455_2  17093.0           None          GM0828\n",
+      "8    1169349    D000263      9.2           None          GM0828\n",
+      "9    1169348    D000045      0.7           None          GM0828\n",
+      "10   1169347    D000029      0.7           None          GM0828\n",
+      "11   1169346    D000025      1.0           None          GM0828\n",
+      "12   1169345    D000028      1.1           None          GM0828\n",
+      "13   1169344    A018944   3555.0           None          GM0828\n",
+      "14   1169343  A018943_5    282.0           None          GM0828\n",
+      "15   1169342    M000368      1.2           None          GM0828\n",
+      "16   1169341    M002179   9435.0           None          GM0828\n",
+      "17   1169340    A019276  36600.0           None          GM0828\n",
+      "18   1169339      72003  32710.0           None          GM0828\n",
+      "19   1169338      40001  13320.0           None          GM0828\n",
+      "20   1169337  A018943_2  46035.0           None          GM0828\n",
+      "21   1169336     300014    910.0           None          GM0828\n",
+      "22   1169335     300010   1565.0           None          GM0828\n",
+      "23   1169334     300009    825.0           None          GM0828\n",
+      "24   1169333     383105    510.0           None          GM0828\n",
+      "25   1169332     300005   1820.0           None          GM0828\n",
+      "26   1169331     300003   1695.0           None          GM0828\n",
+      "27   1169330     301000    430.0           None          GM0828\n",
+      "28   1169329  M000200_2   7755.0           None          GM0828\n",
+      "29   1169328    D000193  16410.0           None          GM0828\n",
+      "..       ...        ...      ...            ...             ...\n",
+      "71   1169285    M000297  39130.0           None          GM0828\n",
+      "72   1169284    M000100    554.0           None          GM0828\n",
+      "73   1169283    M000114      2.3           None          GM0828\n",
+      "74   1169282    1016030  14418.0           None          GM0828\n",
+      "75   1169281    1016040  12173.0           None          GM0828\n",
+      "76   1169280    1050015  12778.0           None          GM0828\n",
+      "77   1169279  1050010_2  39369.0           None          GM0828\n",
+      "78   1169278  M000179_2      7.0           None          GM0828\n",
+      "79   1169277  M000179_1    705.0           None          GM0828\n",
+      "80   1169276  M000173_2     10.0           None          GM0828\n",
+      "81   1169275  M000173_1    904.0           None          GM0828\n",
+      "82   1169274    A008187   2927.0           None          GM0828\n",
+      "83   1169273    H008766   4199.0           None          GM0828\n",
+      "84   1169272    H008751    641.0           None          GM0828\n",
+      "85   1169271    H007119    284.0           None          GM0828\n",
+      "86   1169270    H008673    457.0           None          GM0828\n",
+      "87   1169269  2012657_2   8508.0           None          GM0828\n",
+      "88   1169268    2012655   7467.0           None          GM0828\n",
+      "89   1169267       1050   4778.0           None          GM0828\n",
+      "90   1169266       1080   6825.0           None          GM0828\n",
+      "91   1169265       1020  38558.0           None          GM0828\n",
+      "92   1169264       1010  40215.0           None          GM0828\n",
+      "93   1169263      80200  17162.0           None          GM0828\n",
+      "94   1169262      53715  26911.0           None          GM0828\n",
+      "95   1169261      53310  21319.0           None          GM0828\n",
+      "96   1169260      53050  10772.0           None          GM0828\n",
+      "97   1169259      10680  14212.0           None          GM0828\n",
+      "98   1169258       4000  45026.0           None          GM0828\n",
+      "99   1169257       3000  45350.0           None          GM0828\n",
+      "100  1169256    T001036  90376.0           None          GM0828\n",
+      "\n",
+      "[101 rows x 5 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_test = \"?$filter=WijkenEnBuurten eq '\"+selectie_gem+\"'\"\n",
+    "# Alleen op deze manier kan je een ID uit de geografische tabel in het url-filter plaatsen. Ook de spaties tellen.)\n",
+    "data_observations = get_observations(url_voorbeeld, url_filter=url_test)\n",
+    "data_observations.head()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# To do: \n",
-    "- Bedenk efficiente methode om tabellen samen te voegen en maak er een functie van."
+    "- Bedenk efficiente methode om tabellen samen te voegen en maak er een functie van.\n",
+    "\n",
+    "Kies de kolommen die je nodig hebt en filter op rijen en plaatsen.\n",
+    "Gebruik pivot functie in pandas na het filteren?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function split in module re:\n",
+      "\n",
+      "split(pattern, string, maxsplit=0, flags=0)\n",
+      "    Split the source string by the occurrences of the pattern,\n",
+      "    returning a list containing the resulting substrings.  If\n",
+      "    capturing parentheses are used in pattern, then the text of all\n",
+      "    groups in the pattern are also returned as part of the resulting\n",
+      "    list.  If maxsplit is nonzero, at most maxsplit splits occur,\n",
+      "    and the remainder of the string is returned as the final element\n",
+      "    of the list.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
